fixed most of the nav bar with exception to the spacing in the links

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,10 @@
       width: 96px;
       height: 66px;
   }
+  #imagehours{
+      display: none;
+  }
+
   /* top section for landing page */
   #statement h1{
     font-weight: lighter;
@@ -159,16 +163,69 @@
         margin: 230px auto auto 58px;
     }
     #navbar ul li a{
-        font-size: 18px;
-        /* margin: 0; */
-        /* padding: 5px; */
-        background-color: #686868;
+        font-size: 24px;
     }
     #right{
         display: flex;
         margin-right: 2%;
-        margin-left: auto;
+        /* margin-left: auto; */
+        margin-top: 50px;
     }
+    /* for phone on navbar */
+    #phone{
+        display: grid;
+        margin-right: 100px;
+    }
+    #imagephone{
+        grid-column: 1/2;
+        grid-row: 1/3;
+        margin-right: 25px;
+
+    }
+    #call{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        font-size: 24px;
+        margin-top: -10px;
+    }
+    #telephone{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin-top: -100px;
+        margin-bottom: auto;
+        font-size: 24px;
+        text-decoration: underline;
+    }
+    /* office hours on nav bar */
+    #mobileimagehours{
+        display: none;
+    }
+    #hours{
+        display: grid;
+    }
+    #imagehours{
+        grid-column: 1/2;
+        grid-row: 1/3;
+        margin-right: 25px;
+    }
+    #officehours{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        font-size: 24px;
+        margin-top: -10px;
+    }
+    #hourTable{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        font-size: 24px;
+        line-height: 5px;
+        margin-bottom: 40px;
+    }
+    #hourTable th{
+        font-weight: lighter;
+        text-align: left;
+    }
+
     li a {
         display: block;
         text-align: center;
